# mlir_deprecated

./: README.md  notes.md
examples/: CMakeLists.txt
examples/LiftIL/: CMakeLists.txt
examples/LiftIL/Tutorial1/: CMakeLists.txt  Dialect.h  LiftDialect.cpp  liftTut1.cpp
examples/LiftIL/Tutorial1/include/lift/: AST.h  Dialect.h  Lexer.h  MLIRGen.h
examples/LiftIL/Tutorial1/parser/: AST.cpp
include/mlir/Conversion/RiseToStandard/: ConvertRiseToStandard.h
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/Lift/: AST.h  AttributeDetail.h  Attributes.h  CMakeLists.txt  Dialect.h  Ops.h  Ops.td  Parser.h  TypeDetail.h  Types.h
include/mlir/Dialect/Rise/: AST.h  AttributeDetail.h  Attributes.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.h  Ops.td  Parser.h  Passes.h  TypeDetail.h  Types.h
include/mlir/Dialect/Rise/Transforms/: CMakeLists.txt  RiseTransformPatterns.td
include/mlir/IR/: DialectSymbolRegistry.def
lib/Conversion/: CMakeLists.txt
lib/Conversion/RiseToStandard/: CMakeLists.txt  ConvertRiseToStandard.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Lift/: CMakeLists.txt  LiftDialect.cpp  MLIRGen.cpp  liftIL.cpp  liftTut1.cpp
lib/Dialect/Lift/IR/: AST.cpp  Attributes.cpp  LiftDialect.cpp  MLIRGen.cpp  Ops.cpp  Types.cpp
lib/Dialect/Rise/: CMakeLists.txt  RiseRegistration.cpp  riseIL.cpp
lib/Dialect/Rise/IR/: AST.cpp  Attributes.cpp  MLIRGen.cpp  Ops.cpp  RiseDialect.cpp  Types.cpp
test/Conversion/RiseToStandard/: conversion.mlir
test/Dialect/Lift/: codegen.mlir  liftThatGetsParsed.lift  liftThatGetsParsed.toy  simpleIRRecognitionExample.lift  structural_experiments.mlir  syntax.mlir
test/Dialect/Rise/: codegen.mlir  dot_product.mlir  dot_product_simplified.mlir  liftThatGetsParsed.lift  mm.mlir  simpleIRRecognitionExample.lift  structural_experiments.mlir  syntax.mlir
tools/mlir-opt/: CMakeLists.txt
